tests/fail/MultiLineComment.java
package fail;

import java.lang.System;

public class MultiLineComment {
    public static void main(String[] args) {
        System.out.println(42);
        /*System.out.println(42);*/ */
    }
}
